@@ -274,7 +274,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,6,306,12
     CONTROL         "Play navigational sounds and &alerts.",IDC_PLAY_NAVIGATIONAL_SOUNDS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,42,306,12
-    CONTROL         "Use &unicode characters for accidentals (Sharp, Flat, Neutral).",IDC_USE_UNICODE_CHARACTERS,
+    CONTROL         "Use unicode characters for &accidentals (Sharp, Flat, Neutral).",IDC_USE_UNICODE_CHARACTERS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,60,306,12
     LTEXT           "&Page Size:",IDC_PAGE_SIZE_STATIC,6,78,48,12
     EDITTEXT        IDC_PAGE_SIZE,54,78,90,12,ES_AUTOHSCROLL
@@ -291,8 +291,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,4,5,0
- PRODUCTVERSION 2,4,5,0
+ FILEVERSION 2,4,6,0
+ PRODUCTVERSION 2,4,6,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -309,12 +309,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Rama"
             VALUE "FileDescription", "WhiteNote Music Narrator"
-            VALUE "FileVersion", "2.4.5.0"
+            VALUE "FileVersion", "2.4.6.0"
             VALUE "InternalName", "WhiteNote.exe"
             VALUE "LegalCopyright", "This is a free and open source software. Get the latest version from www.white-note.com"
             VALUE "OriginalFilename", "WhiteNote.exe"
             VALUE "ProductName", "WhiteNote"
-            VALUE "ProductVersion", "2.4.5.0"
+            VALUE "ProductVersion", "2.4.6.0"
         END
     END
     BLOCK "VarFileInfo"
